# ifcgeom

./: .clang-tidy.in  .gitignore  .pkg  CMakeLists.txt  README.md
.github/workflows/: unix.yml
cmake/: clang-tidy.cmake
exe/: compare_convex_hulls.cc  compare_geom.cc  list_geometry_types.cc  scan_render_errors.cc
include/ifcgeom/: geometric_repr_item.h  mapped_item.h  styled_item.h  topological_repr_item.h
include/ifcgeom/core/: analysis.h  context.h  geom_hash.h  io.h  match.h  placement.h  queries.h  render.h  types.h  utilities.h  xform.h
include/ifcgeom/geometric_repr_item/: boolean_result.h  composite_crv_segment.h  crt_xform_operator.h  curve.h  geometric_set.h  half_space_solid.h  placement.h  point.h  profile_def.h  solid_model.h  surface.h
include/ifcgeom/tools/: filters.h  queries.h
include/ifcgeom/topological_repr_item/: connected_face_set.h  edge.h  face.h  face_bound.h  loop.h  vertex.h
resources/: Wand_ArchiCad.ifc  Wand_ArchiCad_BRep.ifc  Wand_Revit_Geometrie.ifc  Wand_Revit_Solid.ifc  mapped_repr.ifc
resources/brep/: HZG-OH-ZP-U1-4200M-004-H5-b_DD04.ifc
resources/solid/: RLT-OH-ZP-U2-4300M-002-H5-b_DD04.ifc
src/: geometric_repr_item.cc  mapped_item.cc  styled_item.cc  topological_repr_item.cc
src/core/: analysis.cc  context.cc  types.cc  utilities.cc
src/geometric_repr_item/: boolean_result.cc  composite_crv_segment.cc  crt_xform_operator.cc  curve.cc  geometric_set.cc  half_space_solid.cc  placement.cc  point.cc  profile_def.cc  solid_model.cc  surface.cc
src/topological_repr_item/: connected_face_set.cc  edge.cc  face.cc  face_bound.cc  loop.cc  vertex.cc
test/ifcgeom/: boolean_set_operation_test.cc  geom_hash_test.cc  mapped_items_test.cc  placement_test.cc  render_test.cc  revolved_area_test.cpp  rotate_test.cc  test_dir.h.in
